# demo_decision_tree

./: .gitignore  README.md  pyproject.toml
src/: convert_tree_file_into_strategies_file.py  exceptions.py  feature_flags.py  local_types.py  main.py  models.py
src/tree_to_strategies/: app.py  exceptions.py  local_types.py  models.py
tests/: test_read_strategies_from_tree.py  test_read_tree_from_file.py
tests/e2e/: always_possible_strategies_from_tree__288_29.txt  expected_strategies_from_tree_to_convert__288_29.txt  strategies_from_tree__288_29.txt  test_tree_to_strategies.py  tree_to_convert__288_29.txt
