[tool.poetry]
name = "doublescibid"
version = "0.1.0"
description = ""
authors = ["GALVAN Philippe <galvan.philippe@hotmail.fr>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
black = "^24.8.0"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
